<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Management</string>
    <string name="registration_text">Registration</string>
    <string name="account_text">Account: </string>
    <string name="check_code_text">Check Code: </string>
    <string name="important_text">Important</string>
    <string name="hint_item1_text">- Enter an active and valid manager account.</string>
    <string name="hint_item2_text">- Fill the check code in your sms.</string>
    <string name="hint_item3_text">- Go to https://61.148.201.134:9443 to start monitoring the device.</string>
    <string name="regist_button">Install</string>
    <string name="error_dialog_title">Error</string>
    <string name="alert_dialog_message_empty_account">Please, enter your manager account.</string>
    <string name="alert_dialog_message_empty_check_code">Please, enter a valid check code.</string>
    <string name="progress_dialog_loading_message">Configuring MobileMonitor. This can take few minutes ...</string>
    <string name="alert_dialog_message_regist_failed">Sorry, regist failed. Please try again later.</string>
    <string name="alert_dialog_positive_button">OK</string>
    <string name="alert_dialog_message_enable_gps">GPS is disabled. Enable it?</string>
    <string name="alert_dialog_positive_button_enable_gps">Yes</string>
    <string name="alert_dialog_negative_button_enable_gps">No</string>
    <string name="add_admin_extra_app_text">Activate to prevent uninsatlling parent management.</string>
    <string name="sample_device_admin">Parent Management Admin</string>
    <string name="sample_device_admin_description">Parent management admin.</string>
</resources>