<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="top" 
    android:background="@drawable/background" 
    android:padding="10.0dip" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:stretchColumns="1">
    <LinearLayout android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        <TextView 
            android:textSize="24.0sp" 
            android:textStyle="bold" 
            android:textColor="#ff000000" 
            android:gravity="center" 
            android:id="@+id/registrationTextView" 
            android:padding="20.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/registration_text" />
    </LinearLayout>
    <TableRow>
        <TextView 
            android:textColor="#ff000000" 
            android:gravity="left" 
            android:id="@+id/accountTextView" 
            android:padding="10.0dip" 
            android:text="@string/account_text" />
        <EditText 
            android:textSize="18.0px" 
            android:gravity="left" 
            android:id="@+id/accountEditText" 
            android:padding="10.0dip" 
            android:singleLine="true" />
    </TableRow>
    <TableRow>
        <TextView 
            android:textColor="#ff000000" 
            android:gravity="left" 
            android:padding="10.0dip" 
            android:text="@string/check_code_text" />
        <EditText 
            android:textSize="18.0px" 
            android:gravity="left" 
            android:id="@+id/checkCodeEditText" 
            android:padding="10.0dip" 
            android:singleLine="true" 
            android:inputType="number" />
    </TableRow>
    <LinearLayout 
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        <TextView 
            android:textStyle="bold" 
            android:textColor="#ff000000" 
            android:layout_gravity="left" 
            android:id="@+id/importantTV" 
            android:paddingLeft="10.0dip" 
            android:paddingTop="20.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/important_text" 
            android:layout_weight="1.0" />
        <TextView 
            android:textColor="#ff000000" 
            android:layout_gravity="left" 
            android:id="@+id/hintTextView1" 
            android:paddingLeft="15.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:singleLine="true" 
            android:text="@string/hint_item1_text" 
            android:layout_weight="1.0" />
        <TextView 
            android:textColor="#ff000000" 
            android:layout_gravity="left" 
            android:id="@+id/hintTextView2" 
            android:paddingLeft="15.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/hint_item2_text" 
            android:layout_weight="1.0" />
        <TextView 
            android:textColor="#ff000000" 
            android:textColorLink="#ff0000ff" 
            android:autoLink="web" 
            android:linksClickable="false" 
            android:layout_gravity="left" 
            android:id="@+id/hintTextView3" 
            android:paddingLeft="15.0dip" 
            android:paddingBottom="30.0dip" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/hint_item3_text" 
            android:layout_weight="1.0" />
        <Button 
            android:id="@+id/registButton" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/regist_button" 
            android:layout_weight="1.0" />
    </LinearLayout>
</TableLayout>